examples/invalid_feature_secret/missing_feature_status.argx
module invalid.missing_feature_status
provider OpenAI { kind external enabled false dry_run_only true requires feature_flag requires approval }
feature F { provider OpenAI default disabled requires approval }
